--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,6 @@ Redirect 301 /newsletter /newsletter.php
 # Social Media Redirects
 Redirect 301 /facebook https://www.facebook.com/groups/cyberuci/
 Redirect 301 /slack http://ucicyber.slack.com/signup
+
+#Redirect receipts to google form
+Redirect 301 /receipts https://goo.gl/forms/cWHtqVnh5Y22QtyO2
