Updated config file

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ slack:              https://ucicyber.slack.com/signup
 
 # personal
 location:           Irvine, CA
-phone:              310-318-5555
+phone:              xxx-xxx-xxxx
 email:              ucicyber@gmail.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
