edit .htaccess to align with new website

--- a/.htaccess
+++ b/.htaccess
@@ -2,14 +2,15 @@
 Options -Indexes
 
 # Page short Redirects
-Redirect 301 /ccdc /ccdc.php
-Redirect 301 /board /board.php
-Redirect 301 /calendar /calendar.php
-Redirect 301 /newsletter /newsletter.php
+# Redirect 301 /ccdc /ccdc.php
+Redirect 301 /board https://cyberuci.com/board
+Redirect 301 /events https://cyberuci.com/events
+# Redirect 301 /calendar /calendar.php
+# Redirect 301 /newsletter /newsletter.php
 
 # Social Media Redirects
-Redirect 301 /facebook https://www.facebook.com/groups/cyberuci/
-Redirect 301 /slack http://ucicyber.slack.com/signup
+# Redirect 301 /facebook https://www.facebook.com/groups/cyberuci/
+# Redirect 301 /slack http://ucicyber.slack.com/signup
 
 #Redirect receipts to google form
-Redirect 301 /receipts https://goo.gl/forms/cWHtqVnh5Y22QtyO2
+# Redirect 301 /receipts https://goo.gl/forms/cWHtqVnh5Y22QtyO2
